Broke down on mobile, now fixed for the most part

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ h2 {
 
 .loader {
   margin: 0;
-  width: clamp(30rem, 20vw, 45rem);
+  width: clamp(100vw, 20vw, 100vw);
   height: 50px;
   overflow: hidden;
 }
@@ -160,6 +160,7 @@ h2 {
 .loader::before {
 content: attr(data-text);
 position: relative;
+overflow: hidden;
 top: -42px;
 width: calc(100% + 27px);
 
@@ -278,7 +279,7 @@ footer {
   border-radius: 60%;
 }
 
-/* MEDIA QUERIES for Nav */
+/* MEDIA QUERIES */
 /*  Hamburger Menu */
 @media screen and (max-width: 820px) {
 
@@ -347,7 +348,15 @@ footer {
   }
 }
 
-/* DESKTOP*/
+/* Squiggle */
+
+.subh2 {
+  display: grid;
+  justify-items: center;
+  width: 100vw;
+}
+
+/* Desltop*/
 @media screen and (min-width: 820px) {
 
   .hlogo {
